[package]
name = "rusted_cypher"
version = "1.0.0"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
description = "Send cypher queries to a neo4j database"
repository = "https://github.com/livioribeiro/rusted-cypher"
documentation = "http://livioribeiro.github.io/rusted_cypher/rusted_cypher/"
readme = "README.md"
keywords = ["neo4j", "database", "rest", "cypher", "graph"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
]

[dependencies]
hyper = "0.10"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
semver = "0.5"
time = "0.1"
quick-error = "1.1"
log = "0.3"
