[package]
name = "rusted_cypher"
version = "1.1.1"
edition = "2018"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
description = "Send cypher queries to a neo4j database"
repository = "https://github.com/livioribeiro/rusted-cypher"
documentation = "https://docs.rs/rusted_cypher/"
readme = "README.md"
categories = ["database"]
keywords = ["neo4j", "database", "rest", "cypher", "graph"]
license = "MIT/Apache-2.0"
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
]

[dependencies]
hyper = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
semver = "0.9.0"
time = "0.1"
log = "0.3"
base64 = "0.12.3"
thiserror = "1.0.20"
tokio = { version = "0.2.11", features = ["net", "blocking", "macros"] }
regex = "1.3.1"